--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -636,6 +636,10 @@
   width: 100;
   height: 100vh;
 }
+.textoContador{
+  color: white;
+  text-align: center;
+}
 .titulo_somosMas{
   color: #EBBE48;
   padding: 10px;
