--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -630,24 +630,33 @@
   height: 2rem;
 }
 /* -----Fin Seccion CARDS de cursos----- */
+
 /* Inicio seccion cursos y capacitaciones Somos Mas */
 .seccion_somosMas{
   background-color: #34668A;
-  width: 100;
-  height: 100vh;
+  padding: 8rem 0;
+}
+.gifSomosMas{
+  padding-bottom: 2.5rem;
 }
 .textoContador{
+  font-weight: bold;
   color: white;
   text-align: center;
+  margin-bottom: 0;
 }
 .titulo_somosMas{
   color: #EBBE48;
-  padding: 10px;
-  padding-left: 40px;
+  font-size: 1.7rem;
+  font-weight: bold;
+  margin-bottom: 0;
+  padding: 0px 10px 4px 40px;
 }
 .subtitulo_somosMas{
   color: white;
-  padding-left: 50px;
+  font-size: 1.3rem;
+  font-weight: 500;
+  padding-left: 40px;
 }
 .contador_somosMas{
   width: 100%;
@@ -1379,6 +1388,7 @@
 @media screen and (max-width: 975px) {
   .navbar-brand img {
     width: 100px;
+    height: 25px;
   }
 }
 /* ---Boton al Top--- */
