--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -650,13 +650,13 @@
   font-size: 1.75rem;
   font-weight: bold;
   margin-bottom: 0;
-  padding: 0px 0px 0px 40px;
+  padding: 0px 0px 0px 5rem;
 }
 .subtitulo_somosMas{
   color: white;
   font-size: 20px;
   font-weight: 500;
-  padding-left: 40px;
+  padding-left: 5rem;
 }
 .contador_somosMas{
   width: 100%;
@@ -688,7 +688,7 @@
   font-size: 1.75rem;
   font-weight: bold;
   margin-bottom: 0;
-  padding: 0px 0px 70px 40px;
+  padding: 0px 0px 70px 5rem;
   padding-top: 8rem;
   
 }
