--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -691,7 +691,7 @@
     align-items: center;
     
     
-    max-width: 700px;
+    width: 600px;
     box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
     border-radius: 20px;
     overflow: hidden;
@@ -709,22 +709,26 @@
 .card__containerImage {
   height: 360px;
   background-color: var(--azul-claro);
+  display: flex;
+  align-items: center;
 }
 .card__image {
   width: 7em;
   height: auto;
   margin: 0 2em;
-  padding-top: 120px;
+ 
 }
 .card__containerImage_amigo {
-  height: 350px;
+  height: 360px;
   background-color: var(--amarillo);
+  display: flex;
+  align-items: center;
 }
 .card__image_amigo {
   width: 7em;
   height: auto;
   margin: 0 2em;
-  padding-top: 120px;
+  
 }
 .card__title {
   font-size: 24px;
@@ -739,10 +743,7 @@
   font-family: "Noah Text";
   padding: 1rem 1rem;
 }
-.boton{
-  margin-bottom: 10px !important;
-  
-}
+
 
 /* -----Inicio Footer----- */
 .footer {
