--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -771,6 +771,24 @@
   padding: 1rem 1rem;
   margin-bottom: 3rem;
 }
+/* -----Inicio Media Qeries Cursos y capacitaciones----- */
+@media screen and (max-width: 600px) {
+  .container-card_planAnual {
+    display: flex;
+    align-items: center;
+    width: 500px;
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
+    border-radius: 20px;
+    overflow: hidden;
+    transition: ease-in-out 0.5s;
+}
+.card__containerImage {
+  height: 300px;
+  background-color: var(--azul-claro);
+  display: flex;
+  align-items: center;
+}
+}
 
 /* -----Inicio Footer----- */
 .footer {
