--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -35,6 +35,36 @@
   font-weight: normal;
 }
 
+/* CONTADOR CAMPUS --> ELIMINAR cuando el campus comience */
+.countdown-section{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: var(--azul-claro);
+}
+.title-countdown{
+  color: var(--azul-oscuro);
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+}
+.countdown{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 4rem;
+}
+.time h2{
+  font-size: 4rem;
+}
+.time small{
+  font-size: 1.2rem;
+}
+
 
 /* ---Eliminado de los botones el focus de Bootstrap--- */
 .btn:focus {
